@@ -12,6 +12,7 @@ openbve (0.9.5.5-0ubuntu2) unreleased; urgency=low
   * Handle ll-CC default langauge selection and fall back to just ll.
   * Use Sdl_WM_SetIcon() on all platforms
   * Bump openbve-data (>= 0.9.5.5+dfsg-0ubuntu3) dependency
+  * Load timetables relative to route directory, not trainpath
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Thu, 19 Feb 2009 18:49:21 +0000
 
